<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/grid_layout_view_task_info"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp"
    android:columnCount="2"
    android:background="@color/background_material_light">

    <TextView
        android:id="@+id/text_view_item_needed_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_label"
        android:textColor="@color/secondary_text_default_material_light"
        android:textSize="26sp"/>
    <TextView
        android:id="@+id/text_view_item_needed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_text_default_material_light"
        android:textSize="26sp"/>
    <TextView
        android:id="@+id/text_view_max_price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_price_label"
        android:textColor="@color/secondary_text_default_material_light"
        android:textSize="26sp"
        android:paddingTop="10dp"/>
    <TextView
        android:id="@+id/text_view_max_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_text_default_material_light"
        android:textSize="26sp"/>
    <TextView
        android:id="@+id/text_view_bounty_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bounty_label"
        android:textColor="@color/secondary_text_default_material_light"
        android:textSize="26sp"
        android:paddingTop="10dp"/>
    <TextView
        android:id="@+id/text_view_bounty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_text_default_material_light"
        android:textSize="26sp"/>
    <TextView
        android:id="@+id/text_view_notes_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes_label"
        android:textColor="@color/secondary_text_default_material_light"
        android:textSize="26sp"
        android:paddingTop="10dp"/>
    <TextView
        android:id="@+id/text_view_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_text_default_material_light"
        android:textSize="26sp"/>
</GridLayout>