<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.tarian.bartr.ConfirmActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="fill_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/blue">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:id="@+id/text_view_confirm_item_needed"
                    style="@style/TextAppearance.AppCompat.Widget.ActionMode.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <GridLayout
        android:id="@+id/grid_layout_confirm_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appbar"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:columnCount="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/price_label"
            android:textColor="@color/secondary_text_default_material_light"
            android:textSize="26sp"/>
        <TextView
            android:id="@+id/text_view_confirm_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/primary_text_default_material_light"
            android:textSize="26sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/bounty_label"
            android:textColor="@color/secondary_text_default_material_light"
            android:textSize="26sp"/>
        <TextView
            android:id="@+id/text_view_confirm_bounty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/primary_text_default_material_light"
            android:textSize="26sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/total_label"
            android:textColor="@color/secondary_text_default_material_light"
            android:textSize="26sp"/>
        <TextView
            android:id="@+id/text_view_confirm_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/primary_text_default_material_light"
            android:textSize="26sp"/>
    </GridLayout>
    <Button
        android:id="@+id/text_view_confirm_with_other"
        style="?attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/grid_layout_confirm_price"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/confirm_with_other"
        android:textColor="@color/button_text"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:onClick="confirmPattern"/>
</RelativeLayout>
